@startuml
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0

' === Контроллеры ===
package "Контроллеры" {
    class AuthController
    class RoomController
    class MessageController
    class UserController
    class ChatWebSocket
}

' === Бизнес-логика и БД ===
package "Бизнес-логика" {
    class ChatService
    class TokenManager
}

' === БД ===
package "База данных" {
    class IRCDBWrapper
}

' === Токены ===
package "Токены" {
    class TokenGenerator
    class Token
}

' === Плагины ===
package "Плагины" {
    class ChatServicePlugin
    class DatabasePlugin
    class LoggerPlugin
}


' === Связи ===

AuthController --> ChatServicePlugin
AuthController --> LoggerPlugin

RoomController --> ChatServicePlugin
RoomController --> LoggerPlugin

MessageController --> ChatServicePlugin
MessageController --> LoggerPlugin

UserController --> ChatServicePlugin
UserController --> LoggerPlugin

ChatWebSocket --> ChatServicePlugin
ChatWebSocket --> LoggerPlugin

ChatServicePlugin --> ChatService
ChatServicePlugin --> DatabasePlugin : GetDB()

ChatService --> IRCDBWrapper
ChatService --> TokenManager

TokenManager --> TokenGenerator : использует

TokenGenerator <-- Token
@enduml